# quorum-interview

./: .gitignore  .pylintrc  Makefile  QUESTIONS.md  README.md  pyproject.toml  pytest.ini  requirements.txt
docs/: quorum.drawio
src/config/: settings.py  urls.py
src/config/templates/: base.html
src/config/templates/includes/: navbar.html
src/config/templates/static/css/: index.css
src/congress/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
src/congress/factories/: bill_factory.py  legislator_factory.py  vote_factory.py  vote_result_factory.py
src/congress/management/commands/: csvpopulate.py
src/congress/migrations/: 0001_initial.py  0002_alter_bill_sponsor_alter_vote_bill_and_more.py  0003_bill_number_bill_origin_bill_slug_and_more.py
src/congress/templates/congress/: bill_detail.html  bill_list.html  bill_vote_result.html  index.html  legislator_detail.html  legislator_list.html  legislator_vote_result.html
